arch-istio-all-in-one.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arch-namespace
  labels:
    istio-injection: enabled
spec: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: arch-namespace
  name: arch-jaeger-deployment
  labels:
    app: arch-jaeger-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arch-jaeger
  strategy: {}
  template:
    metadata:
      labels:
        app: arch-jaeger
    spec:
      serviceAccountName: arch-admin
      containers:
        - image: jaegertracing/all-in-one:1.51.0
          name: jaeger-all-in-one
          ports:
            - containerPort: 4318
              name: otlp-http
            - containerPort: 4317
              name: otlp-grpc
            - containerPort: 16686
              name: frontend

---

apiVersion: v1
kind: Service
metadata:
  name: arch-jaeger
  namespace: arch-namespace
  labels:
    app: arch-jaeger
    primary-port-name: otlp-http
spec:
  ports:
    - port: 4317
      name: otlp-grpc
      targetPort: 4317
    - port: 4318
      name: otlp-http
      targetPort: 4318
    - port: 16686
      name: frontend
      targetPort: 16686
      nodePort: 30001
  selector:
    app: arch-jaeger
  type: NodePort
  sessionAffinity: None

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: arch-otel-col-deployment
  name: arch-otel-col-deployment
  namespace: arch-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arch-otel-col
  strategy: {}
  template:
    metadata:
      labels:
        app: arch-otel-col
    spec:
      serviceAccountName: arch-admin
      containers:
        - image: otel/opentelemetry-collector-contrib:0.101.0
          name: otel-collector
          command:
            - "/otelcol-contrib"
            - "--config=/conf/otel-collector-config.yaml"
          ports:
            - containerPort: 4318
              name: otlp-http
          volumeMounts:
            - name: otel-collector-config-vol
              mountPath: /conf
      volumes:
        - name: otel-collector-config-vol
          configMap:
            name: arch-otel-col-configmap
            items:
              - key: collector-config.yaml
                path: otel-collector-config.yaml

---

apiVersion: v1
kind: Service
metadata:
  name: arch-otel-col
  namespace: arch-namespace
  labels:
    app: arch-otel-col
    primary-port-name: otlp-http
spec:
  ports:
    - port: 4318
      name: otlp-http
      targetPort: 4318
    - port: 4317
      name: otlp-grpc
      targetPort: 4317
  selector:
    app: arch-otel-col
  type: ClusterIP
  sessionAffinity: None

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: arch-config-watcher-deployment
  namespace: arch-namespace
spec:
  selector:
    matchLabels:
      app: arch-config-watcher
  template:
    metadata:
      labels:
        app: arch-config-watcher
    spec:
      serviceAccountName: arch-admin
      containers:
        - name: arch-config-watcher
          image: springcloud/spring-cloud-kubernetes-configuration-watcher:3.1.1
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              port: 8888
              path: /actuator/health/readiness
            initialDelaySeconds: 90
          livenessProbe:
            httpGet:
              port: 8888
              path: /actuator/health/liveness
            initialDelaySeconds: 60
          ports:
            - containerPort: 8888
---

apiVersion: v1
kind: Service
metadata:
  name: arch-config-watcher
  namespace: arch-namespace
  labels:
    app: arch-config-watcher
    primary-port-name: http
spec:
  ports:
    - name: http
      port: 8888
      targetPort: 8888
  selector:
    app: arch-config-watcher
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: arch-iam-deployment
  name: arch-iam-deployment
  namespace: arch-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arch-iam
  strategy: {}
  template:
    metadata:
      labels:
        app: arch-iam
    spec:
      serviceAccountName: arch-admin
      containers:
        - image: docker.io/reion78/arch-iam:1.0_istio
          name: arch-iam
          ports:
            - containerPort: 9090
              name: http
          readinessProbe:
            httpGet:
              port: 9090
              path: /actuator/health/readiness
            initialDelaySeconds: 90
          livenessProbe:
            httpGet:
              port: 9090
              path: /actuator/health/liveness
            initialDelaySeconds: 60
          # 优雅停机
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 10" ]
          # 外部配置
          volumeMounts:
            - name: config-volume
              mountPath: /config
      volumes:
        - name: config-volume
          configMap:
            name: arch-iam

---

apiVersion: v1
kind: Service
metadata:
  name: arch-iam
  namespace: arch-namespace
  labels:
    app: arch-iam
    primary-port-name: http
spec:
  ports:
    - port: 9090
      name: http
      targetPort: 9090
  selector:
    app: arch-iam
  type: ClusterIP
  sessionAffinity: None

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: arch-users-deployment
  name: arch-users-deployment
  namespace: arch-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arch-users
  strategy: {}
  template:
    metadata:
      labels:
        app: arch-users
    spec:
      serviceAccountName: arch-admin
      containers:
        - image: docker.io/reion78/arch-users:1.0_istio
          name: arch-users
          ports:
            - containerPort: 8081
              name: http
          readinessProbe:
            httpGet:
              port: 8081
              path: /actuator/health/readiness
            initialDelaySeconds: 90
          livenessProbe:
            httpGet:
              port: 8081
              path: /actuator/health/liveness
            initialDelaySeconds: 60
          # 优雅停机
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 10" ]
          volumeMounts:
            - name: config-volume
              mountPath: /config
      volumes:
        - name: config-volume
          configMap:
            name: arch-users

---

apiVersion: v1
kind: Service
metadata:
  name: arch-users
  namespace: arch-namespace
  labels:
    app: arch-users
    primary-port-name: http
spec:
  ports:
    - port: 8081
      name: http
      targetPort: 8081
  selector:
    app: arch-users
  type: ClusterIP
  sessionAffinity: None

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: arch-app-deployment
  name: arch-app-deployment
  namespace: arch-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arch-app
  strategy: {}
  template:
    metadata:
      labels:
        app: arch-app
    spec:
      serviceAccountName: arch-admin
      containers:
        - image: docker.io/reion78/arch-app:1.0_istio
          name: arch-app
          ports:
            - containerPort: 8080
              name: http
          # 保活探针
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
            initialDelaySeconds: 90
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
            initialDelaySeconds: 60
          # 优雅停机
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"]
          volumeMounts:
            - name: config-volume
              mountPath: /config
      volumes:
        - name: config-volume
          configMap:
            name: arch-app

---

apiVersion: v1
kind: Service
metadata:
  name: arch-app
  namespace: arch-namespace
  labels:
    app: arch-app
    primary-port-name: http
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8080
  selector:
    app: arch-app
  type: ClusterIP
  sessionAffinity: None

---

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: arch-gateway
  namespace: arch-namespace
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 9000
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: arch-route
  namespace: arch-namespace
spec:
  parentRefs:
    - name: arch-gateway
      namespace: arch-namespace
  rules:
    - matches:
        - path:
            type: Exact
            value: "/api-docs"
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: "/arch-iam/swagger-ui/index.html"

    - matches:
        - path:
            type: PathPrefix
            value: "/v3/api-docs/arch-iam"
      backendRefs:
        - name: arch-iam
          port: 9090
    - matches:
        - path:
            type: PathPrefix
            value: "/arch-iam"
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: "/"
      backendRefs:
        - name: arch-iam
          port: 9090
    - matches:
        - path:
            type: PathPrefix
            value: "/v3/api-docs/arch-users"
      backendRefs:
        - name: arch-users
          port: 8081
    - matches:
        - path:
            type: PathPrefix
            value: "/arch-users"
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: "/"
      backendRefs:
        - name: arch-users
          port: 8081
    - matches:
        - path:
            type: PathPrefix
            value: "/v3/api-docs/arch-app"
      backendRefs:
        - name: arch-app
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: "/arch-app"
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: "/"
      backendRefs:
        - name: arch-app
          port: 8080

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: arch-users
  namespace: arch-namespace
spec:
  host: arch-users
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http1MaxPendingRequests: 100
        maxRequestsPerConnection: 10
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 10s
      baseEjectionTime: 1m
      maxEjectionPercent: 100

---

apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: "peer-authentication"
  namespace: arch-namespace
spec:
  mtls:
    mode: STRICT

---

apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: "jwt-authentication"
  namespace: arch-namespace
spec:
  jwtRules:
    - issuer: "http://arch-gateway-istio:9000/arch-iam"
      # arch-gateway-istio 测试未获公网域名，使用集群内部访问域名 (此方式可以因为服务器先后关系导致无法获取，改用固定密钥方式)
      #jwksUri: "http://arch-gateway-istio.arch-namespace.svc.cluster.local:9000/arch-iam/oauth2/jwks"
      jwks: |
        {
          "keys": [
            {
              "kty": "RSA",
              "e": "AQAB",
              "kid": "arch-istio-jwt-kid",
              "n": "xjUqS-9sWZFCVPgzC8VgaAE0ULMURfKfxRSX0UGbT9U1FjCK9L090njQDwKYzPIj6WDdOT55YE3NFyeEc-PKJeCroYv19rUL7mPhR910gQ9AZ_fA1-fumJ8D0nN-6I5qB6eFmYvztW3xw-pEbRMTtAU_gOjHi9HOeesH7epb1yV2_x3CLnIwdEIZlVkNKWWI55P5CV5yFM1ecQwcG4BXFSIYVLgJ6ZqHefKbfSlhOkdbch5FvZApmuXIHdbTJ26ruyFIfJ51Tk0Feqil0VvSvJ-NKokyl9TM2SHoXzX-QnzVan2gfmJy1IPKKmnU2TLHB4rkndtSeb3i4UNcAJ60SQ8nN1a_3tiAqjS7RDWee2G0B9Kuj5lvs7FtpW6cuIeXSHAVlfOlN3fvAtXXhe4RdqC0KlGit-lYrTTD_Olefe_fN0OL9G4V7zdY3n6rgBfDo918Sv9NXtr0y1h_87HKPBGn00oUwiOs [...]
            }
          ]
        }
      forwardOriginalToken: true

---

apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-authorization
  namespace: arch-namespace
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/arch-namespace/sa/arch-admin"]
        - source:
            namespaces: ["arch-namespace"]

    - from:
        - source:
            namespaces: ["istio-system"]

    - to:
        - operation:
            paths: ["/arch-iam/oauth2/{**}", "/arch-iam/swagger-ui/{**}", "/v3/api-docs/{**}", "/api-docs"]

    - from:
        - source:
            requestPrincipals: [ "*" ]
      to:
        - operation:
            methods: ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS", "HEAD"]
            paths:
              - "/arch-users/user/{**}"
              - "/arch-app/ping"

    - from:
        - source:
            requestPrincipals: ["*"]
      to:
        - operation:
            paths:
              - "/arch-users/rpc/{**}"
              - "/arch-iam/rpc/{**}"
              - "/arch-app/rpc/{**}"
      when:
        - key: request.auth.claims[roles]
          values: ["ADMIN"]
